wip: completeness. more on Lindenbaum

--- a/Bibliography.tex
+++ b/Bibliography.tex
@@ -60,7 +60,10 @@
 	 	Prior, A. Time and Modality. Clarendon Press: Oxford, UK, 1957.
 	 	
 	 	\bibitem{Kripke}
-	 	Kripke, S. “Semantical Considerations on Modal Logic,” {\em Acta Philosophica Fennica} {\bf 1963}, {\em 16}: 83-94.
+	 	Kripke, S. Semantical Considerations on Modal Logic. {\em Acta Philosophica Fennica} {\bf 1963}, {\em 16}: 83-94.
+	 	
+	 	\bibitem{negri}
+	 	Negri, S. Kripke completeness revisited. {\em Acts of Knowledge: History, Philosophy and Logic: Essays Dedicated to G{\"o}ran Sundholm} {\bf 2009}, 247-282.
 	 	
 	 	\bibitem{Rushby_Mode_Confusion}
 	 	Rushby, J. Using model checking to help discover mode confusions and other automation surprises. {\em Reliability Engineering and System Safety} {\bf 2002}, {\em 75}, 167-177.
